# DiligentEngine-Noesis-Integration

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  ReadMe.md  SetPlatform.cmake
.github/instructions/: cmake-build.instructions.md
Implementation/: CMakeLists.txt  NoesisGUI.cmake
Implementation/include/: D3D12App.hpp  DiligentNoesisBackendBase.hpp  NoesisAppHost.hpp  PlatformNoesisInput.hpp  SDLPlatform.hpp  VulkanApp.hpp
Implementation/src/: D3D12App.cpp  DiligentNoesisBackendBase.cpp  NoesisAppHost.cpp  PlatformNoesisInput.cpp  SDLPlatform.cpp  VulkanApp.cpp  main.cpp  main_sdl.cpp
Visuals/assets/UI/: GlobalResources.xaml  MainMenu.xaml
Visuals/include/: KeybindRowViewModel.hpp  MainMenuViewModel.hpp  MainMenuVisuals.hpp  SettingsViewModel.hpp
Visuals/src/: KeybindRowViewModel.cpp  MainMenuViewModel.cpp  MainMenuVisuals.cpp  SettingsViewModel.cpp
